@@ -38,9 +38,8 @@ function iComet(config){
 	self.id = iComet.id__++;
 	self.cb = 'icomet_cb_' + self.id;
 	self.timer = null;
-	self.sign_timer = null;
 	self.stopped = true;
-	self.last_sub_time = 0;
+	self.last_msg_time = 0;
 	self.token = '';
 
 	self.data_seq = 0;
@@ -62,204 +61,217 @@ function iComet(config){
 		}
 		self.sign_url += 'cb=' + self.cb + '&cname=' + self.cname;
 	}
-
-	window[self.cb] = function(msg, in_batch){
+	
+	self.onmessage = function(msg){
 		// batch repsonse
 		if(msg instanceof Array){
 			self.log('batch response', msg.length);
+			self.long_polling_pause = true;
 			for(var i in msg){
-				if(!msg){
-					continue;
-				}
+				self.proc_message(msg[i]);
 				if(i == msg.length - 1){
-					window[self.cb](msg[i]);
-				}else{
-					window[self.cb](msg[i], true);
+					self.long_polling_pause = true;
 				}
 			}
-			return;
+		}else{
+			self.proc_message(msg);
 		}
-		//self.log('resp', msg);
+	}
+	// sign, long-polling 需要注册此函数
+	window[self.cb] = self.onmessage;
+	
+	
+	self.proc_message = function(msg){
+		self.log('resp', JSON.stringify(msg));
 		if(self.stopped){
 			return;
 		}
 		if(!msg){
 			return;
 		}
+		self.last_msg_time = (new Date()).getTime();
+		
 		if(msg.type == '404'){
-			self.log('resp', msg);
 			// TODO channel id error!
 			alert('channel not exists!');
 			return;
 		}
 		if(msg.type == '401'){
 			// TODO token error!
-			self.log('resp', msg);
 			alert('token error!');
 			return;
 		}
 		if(msg.type == '429'){
 			//alert('too many connections');
-			self.log('resp', msg);
-			setTimeout(self_sub, 5000 + Math.random() * 5000);
+			self_sub(5000 + Math.random() * 5000);
 			return;
 		}
 		if(msg.type == 'sign'){
-			self.log('proc', msg);
-			if(self.sign_cb){
-				self.sign_cb(msg);
-			}
+			self.sign_cb(msg);
 			return;
 		}
 		if(msg.type == 'noop'){
-			self.last_sub_time = (new Date()).getTime();
-			if(msg.seq == self.noop_seq){
-				self.log('proc', msg);
-				if(self.noop_seq == 2147483647){
-					self.noop_seq = -2147483648;
-				}else{
-					self.noop_seq ++;
-				}
-				// if the channel is empty, it is probably empty next time,
-				// so pause some seconds before sub again
-				setTimeout(self_sub, Math.random() * 1000);
-			}else{
-				// we have created more than one connection, ignore it
-				self.log('ignore exceeded connections');
-			}
+			self.onmessage_noop(msg);
 			return;
 		}
 		if(msg.type == 'next_seq'){
-			self.log('proc', msg);
-			self.data_seq = msg.seq;
-			if(!in_batch){
-				self_sub();
-			}
+			self.onmessage_next_seq(msg);
 			return;
 		}
 		if(msg.type == 'data' || msg.type == 'broadcast'){
-			self.last_sub_time = (new Date()).getTime();
-			if(msg.seq != self.data_seq){
-				if(msg.seq == 0 || msg.seq == 1){
-					self.log('server restarted');
-					// TODO: lost_cb(msg);
-					self.sub_cb(msg);
-				}else if(msg.seq < self.data_seq){
-					self.log('drop', msg);
-				}else{
-					self.log('msg lost', msg);
-					// TODO: lost_cb(msg);
-					self.sub_cb(msg);
-				}
-				
-				self.data_seq = msg.seq;
-			}else{
-				self.sub_cb(msg);
-			}
-			if(self.data_seq == 2147483647){
-				self.data_seq = -2147483648;
-			}else{
-				self.data_seq ++;
-			}
-			if(!in_batch){
-				self_sub();
-			}
+			self.onmessage_data(msg);
 			return;
 		}
 	}
 	
-	self.sign = function(callback){
-		self.log('sign in icomet server...');
-		self.sign_cb = callback;
-		var url = self.sign_url + '&_=' + new Date().getTime();
-		$.ajax({
-			url: url,
-			dataType: "jsonp",
-			jsonpCallback: "cb"
-		});
+	self.onmessage_noop = function(msg){
+		if(msg.seq == self.noop_seq){
+			if(self.noop_seq == 2147483647){
+				self.noop_seq = -2147483648;
+			}else{
+				self.noop_seq ++;
+			}
+			// if the channel is empty, it is probably empty next time,
+			// so pause some seconds before sub again
+			self_sub(Math.random() * 1000);
+		}else{
+			// we have created more than one connection, ignore it
+			self.log('ignore exceeded connections');
+		}
+	}
+	
+	self.onmessage_next_seq = function(msg){
+		self.data_seq = msg.seq;
+		// disconnect & connect
+		self_sub();
+	}
+	
+	self.onmessage_data = function(msg){
+		if(msg.seq != self.data_seq){
+			if(msg.seq == 0 || msg.seq == 1){
+				self.log('server restarted');
+				// TODO: lost_cb(msg);
+				self.sub_cb(msg);
+			}else if(msg.seq < self.data_seq){
+				self.log('drop', msg);
+			}else{
+				self.log('msg lost', msg);
+				// TODO: lost_cb(msg);
+				self.sub_cb(msg);
+			}
+			
+			self.data_seq = msg.seq;
+		}else{
+			self.sub_cb(msg);
+		}
+		if(self.data_seq == 2147483647){
+			self.data_seq = -2147483648;
+		}else{
+			self.data_seq ++;
+		}
+		self_sub();
 	}
 
-	var self_sub = function(){
-		setTimeout(function(){
+	var self_sub = function(delay){
+		var url = self.sub_url
+			 + '&cname=' + self.cname
+			 + '&seq=' + self.data_seq
+			 + '&noop=' + self.noop_seq
+			 + '&token=' + self.token
+			 + '&_=' + new Date().getTime();
+		if(typeof(EventSource)!=="undefined"){
+			if(self.EventSource){
+				return;
+			}
 			self.stopped = false;
-			self.last_sub_time = (new Date()).getTime();
-			$('script.' + self.cb).remove();
-			var url = self.sub_url
-				 + '&cname=' + self.cname
-				 + '&seq=' + self.data_seq
-				 + '&noop=' + self.noop_seq
-				 + '&token=' + self.token
-				 + '&_=' + new Date().getTime();
-	 		self.log('sub ' + url);
-			$.ajax({
-				url: url,
-				dataType: "jsonp",
-				jsonpCallback: "cb"
-			});
-		}, 0);
+			self.last_msg_time = (new Date()).getTime();
+			url = url.replace('/sub?', '/sse?');
+			self.log('sub SSE ' + url);
+			try{
+				self.EventSource = new EventSource(url);
+				self.EventSource.onmessage = function(e){
+					self.onmessage(JSON.parse(e.data));
+				}
+				self.EventSource.onerror = function(){
+					self.log('EventSource error');
+					self.EventSource = null;
+				}
+			}catch(e){
+				self.log(e.message);
+			}
+		}else{
+			if(self.long_polling_pause){
+				return;
+			}
+			delay = delay | 0;
+			setTimeout(function(){
+				self.stopped = false;
+				self.last_msg_time = (new Date()).getTime();
+				$('script.' + self.cb).remove();
+		 		self.log('sub Long-Polling ' + url);
+				$.ajax({
+					url: url,
+					dataType: "jsonp",
+					jsonpCallback: self.cb ///////
+				});
+			}, delay);
+		}
+	}
+	
+	self.sign_cb = function(msg){
+		if(self.stopped){
+			return;
+		}
+		self.cname = msg.cname;
+		self.token = msg.token;
+		try{
+			var a = parseInt(msg.sub_timeout) || 0;
+			self.sub_timeout = (a * 1.3) * 1000;
+		}catch(e){}
+		self_sub();
 	}
 	
 	self.start = function(){
+		self.log('start');
 		self.stopped = false;
-		if(self.timer){
-			clearTimeout(self.timer);
-			self.timer = null;
+		self.last_msg_time = (new Date()).getTime();
+		
+		if(!self.timer){
+			self.timer = setInterval(function(){
+				var now = (new Date()).getTime();
+				if(now - self.last_msg_time > self.sub_timeout){
+					self.log('timeout');
+					self.stop();
+					self.start();
+				}
+			}, 1000);
 		}
+		
 		if(self.sign_url){
-			if(!self.sign_timer){
-				self.sign_timer = setInterval(self.start, 3000 + Math.random() * 2000);
-			}
-			self.sign(function(msg){
-				if(self.sign_timer){
-					clearTimeout(self.sign_timer);
-					self.sign_timer = null;
-				}else{
-					return;
-				}
-				if(!self.stopped){
-					self.cname = msg.cname;
-					self.token = msg.token;
-					try{
-						var a = parseInt(msg.sub_timeout) || 0;
-						self.sub_timeout = (a * 1.2) * 1000;
-					}catch(e){}
-					self.log('start sub ' + self.cname + ', seq=' + self.data_seq + ', timeout=' + self.sub_timeout + 'ms');
-					self._start_timeout_checker();
-					self_sub();
-				}
+			self.log('sign in icomet server...');
+			var url = self.sign_url + '&_=' + new Date().getTime();
+			$.ajax({
+				url: url,
+				dataType: "jsonp",
+				jsonpCallback: self.cb  ///////////
 			});
 		}else{
-			self.log('start sub ' + self.cname + ', seq=' + self.data_seq + ', timeout=' + self.sub_timeout + 'ms');
-			self._start_timeout_checker();
 			self_sub();
 		}
 	}
 
 	self.stop = function(){
+		self.log('stop');
 		self.stopped = true;
-		self.last_sub_time = 0;
+		self.last_msg_time = 0;
 		if(self.timer){
 			clearTimeout(self.timer);
 			self.timer = null;
 		}
-		if(self.sign_timer){
-			clearTimeout(self.sign_timer);
-			self.sign_timer = null;
+		if(self.EventSource){
+			self.EventSource.close();
+			self.EventSource = undefined;
 		}
-	}
-	
-	self._start_timeout_checker = function(){
-		if(self.timer){
-			clearTimeout(self.timer);
-		}
-		self.timer = setInterval(function(){
-			var now = (new Date()).getTime();
-			if(now - self.last_sub_time > self.sub_timeout){
-				self.log('timeout');
-				self.stop();
-				self.start();
-			}
-		}, 1000);
 	}
 	
 	// msg must be string
